Data cell layout

--- a/assets/lang/de.json
+++ b/assets/lang/de.json
@@ -11,5 +11,7 @@
   "average": "Durchschnitt",
   "trip": "Trip",
   "moving": "Fahrt",
-  "total": "Gesamt"
+  "total": "Gesamt",
+  "maximum": "Maximum",
+  "climb": "Anstieg"
 }
