--- a/assets/lang/de.json
+++ b/assets/lang/de.json
@@ -8,10 +8,10 @@
   "history": "Historie",
   "elevation": "Höhe",
   "time": "Zeit",
-  "average": "Durchschnitt",
+  "average": "Schnitt",
   "trip": "Trip",
   "moving": "Fahrt",
   "total": "Gesamt",
-  "maximum": "Maximum",
+  "maximum": "Max",
   "climb": "Anstieg"
 }
