--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -12,6 +12,6 @@
   "trip": "Trip",
   "moving": "Moving",
   "total": "Total",
-  "maximum": "Maximum",
+  "maximum": "Max",
   "climb": "Climb"
 }
